Fix title wrapping by breaking long words

--- a/src/assets/styles/card.module.css
+++ b/src/assets/styles/card.module.css
@@ -19,6 +19,7 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;  
+    word-break: break-all;
     margin-top: .75rem;
     margin-bottom: .5rem;
     font-size: 1.25rem;
